[package]
name = "recursive_toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.193", features=["derive", "rc", "std"]}
serde_json = "1.0.108"
wasm-bindgen = "0.2.89"
said = { git = "https://github.com/THCLab/cesrox", tag = "v0.1.4" }
petgraph = { version = "0.6.4", features = ["serde-1"]}
rand = "0.8.5"
recursion = "0.5.1"
thiserror = "1.0.50"
